--- a/index.html
+++ b/index.html
@@ -115,6 +115,18 @@
         </div>
       </div>
     </div>
+      <div class="split-row-h grid">
+        <img src="src/image-b.jpg">
+        <div class="split-row-h__titlestack">
+          <h2 class="heading">強調と注目をコントロールする</h2>
+          <p>
+            余白（ホワイトスペース）は、デザインにおいて見落とされがちな要素ですが、<br>
+            その役割は極めて重要です。余白は単なる空白ではなく、<br>
+            視覚的なバランスを保つためのツールであり、<br>
+            ユーザー体験を向上させるための重要な要素でもあります。
+          </p>
+        </div>
+      </div>
   </div>
 </body>
 
